Fix competing upload line length on mobile

--- a/ui/scss/component/_search.scss
+++ b/ui/scss/component/_search.scss
@@ -312,4 +312,17 @@
   .help {
     color: var(--color-text);
   }
+
+  @media (max-width: $breakpoint-small) {
+    .section__actions--no-margin {
+      max-width: 100%;
+      .search__top-link {
+        max-width: 100%;
+        .button__content {
+          max-width: 100%;
+          margin-right: var(--spacing-xs);
+        }
+      }
+    }
+  }
 }
